--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
             "dom",
             "es2017"
         ],
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "target": "ES6"
     }
 }
